2010-11-11  Vadim Kurland  <vadim@vk.crocodile.org>

	* configlets/linux24/load_modules: fixed #1844 "generated script
	fails if module nf_conntrack_ipv6 does not exist". Generated
	script tries to load module nf_conntrack_ipv6 if user defined
	any ipv6 rules, however the script should not fail if the module
	is not installed.

	* src/gui/gui.pro (LIBS): fixed #1840: fixed build on Mandriva
	2010, all static libraries should go first on the linker command
	line.

2010-11-10  Vadim Kurland  <vadim@vk.crocodile.org>

	* NATCompiler_ipt.cpp (processNext): fixed SF bug 3103582 "Cant
	create redirect rule in cluster firewall object".  Iptables nat
	rule with target REDIRECT could not be built in a cluster
	configuration. It should be possible to do this by putting cluster
	object in Translated Destination.

	* OSConfigurator_linux24_interfaces.cpp (printDynamicAddressesConfigurationCommands):
	fixed #1838 "function configure_interfaces() does not manage ip
	addresses of vlan interfaces". This function used to take into
	account only interfaces that were direct children objects of the
	firewall. Since vlan interfaces are children of the corresponding
	physical interface, they were not included.

	* FirewallInstaller.cpp (getGeneratedFileFullPath): fixed #1837
	"generated script gets .fw suffix even when user set output file
	name". Suffix .fw should not be appended to the name entered by
	the user in the "output file name" input field in the firewall
	settings dialog.

	* PolicyCompiler_ipfw_writers.cpp (processNext): fixed #1836
	"installer hangs and fails after activation of ipfw policy".  As
	soon as .fw script swapped ipfw sets usig command "ipfw sawp" and
	deleted temporary set 1, ssh session would hang and eventually
	break. We optionally add ipfw rules to permit ssh session used to
	manage the firewall, as well as a rule to permit reply packets but
	the latter rule was not built correctly. It should match source