@@ -1,5 +1,11 @@
 2010-11-11  Vadim Kurland  <vadim@vk.crocodile.org>
 
+	* newClusterDialog_create.cpp (copyRuleSets): Fixed SF bug
+	#3106168 "Branch destinations lost when adding to cluster".  Since
+	the order in which I copy rule sets is undefined and because they
+	may have references to each other via branching rules, I need to
+	fix references after I create all of them.
+
 	* configlets/linux24/load_modules: fixed #1844 "generated script
 	fails if module nf_conntrack_ipv6 does not exist". Generated
 	script tries to load module nf_conntrack_ipv6 if user defined
